--- a/public/css/reg.css
+++ b/public/css/reg.css
@@ -6,22 +6,24 @@
 }
 
 .pesan-flash {
-  padding: 10px;
-  margin-bottom: 15px;
-  border-radius: 4px;
+  padding: 15px;
+  margin: 20px 0;
+  border: 1px solid transparent;
+  border-radius: 5px;
   font-weight: bold;
+  text-align: center;
 }
 
-.success {
-  background-color: #d4edda;
+.pesan-flash.sukses {
   color: #155724;
-  border: 1px solid #c3e6cb;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
 }
 
-.error {
-  background-color: #f8d7da;
+.pesan-flash.error {
   color: #721c24;
-  border: 1px solid #f5c6cb;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
 }
 
 body {
